@@ -3,13 +3,15 @@ package com.pluralsight.blog.data;
 import com.pluralsight.blog.model.Post;
 import org.springframework.stereotype.Component;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 
 @Component
 public class PostRepository {
 
-    private final List<Post> ALL_POSTS = List.of(  new Post(1l, "Earbuds",
+    private final List<Post> ALL_POSTS = new ArrayList<>(Arrays.asList(  new Post(1l, "Earbuds",
                     "You have got to try these in your ears. So tiny and can even block the sounds of screaming toddlers if you so desire.",
                     "You have got to try these in your ears. So tiny and can even block the sounds of screaming toddlers if you so desire.",
                     "Sarah Holderness", new Date()),
